# VK_Cpp_course

./: CMakeLists.txt  EN_Titles.cpp  EN_Titles.h  Episode_Search.cpp  Episode_Search.h  Line_Words.cpp  Line_Words.h  README  RU_Titles.cpp  RU_Titles.h  Series_Search.cpp  Series_Search.h  Tabs.cpp  Tabs.h  akas_test.txt  main.cpp
Searcher_App/: CMakeLists.txt  EN_Titles.cpp  EN_Titles.h  Episode_Search.cpp  Episode_Search.h  Line_Words.cpp  Line_Words.h  RU_Titles.cpp  RU_Titles.h  Searchers.cpp  Searchers.h  Series_Search.cpp  Series_Search.h  main.cpp
Searcher_App/data/: episode_test.txt
Searcher_App/include/: Line_Words.h
Searcher_App/src/: Line_Words.cpp  Searchers.cpp  main.cpp
Searcher_App/tests/: Tests.cpp  basics_test.txt
TextEditor/: CMakeLists.txt  file_2.txt  main.cpp
TextEditor/include/: operations.h  parser.h
